opam-version: "2.0"
synopsis: "Color palette extraction from an image"
description: """\
"""
maintainer:"oana.fabiana.andreescu@gmail.com"
authors: "Oana Andreescu"
homepage: "https://github.com/onix-awk/color-palette-extraction"
bug-reports: "https://github.com/onix-awk/color-palette-extraction/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0"}
  "camlimages" {>= "5.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
